fix: padding horizontol not visible in mobile view

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -17,11 +17,9 @@
     width: 100%;
     height: 100%;
     padding: 8vmax 7vmin;
-    padding-bottom: 0;
 
     @include media-breakpoint-down(md) {
       padding: 7vmin;
-      padding-bottom: 0;
     }
 
     position: fixed;
